@@ -1,17 +1,17 @@
 package no.fintlabs.resourceServices;
 
 import lombok.extern.slf4j.Slf4j;
+
 import no.fint.model.resource.Link;
 import no.fint.model.resource.administrasjon.organisasjon.OrganisasjonselementResource;
+import no.fint.model.resource.utdanning.elev.ElevResource;
 import no.fint.model.resource.utdanning.elev.ElevforholdResource;
 import no.fint.model.resource.utdanning.utdanningsprogram.SkoleResource;
 import no.fintlabs.cache.FintCache;
 import no.fintlabs.links.ResourceLinkUtil;
 import no.fintlabs.user.UserUtils;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import java.util.Collection;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -20,92 +20,66 @@ import java.util.Optional;
 @Service
 public class ElevforholdService {
 
-//    @Value("${fint.kontroll.user.days-before-start-student:0}")
-
-    private static int daysBeforeStartStudent = UserUtils.DAYS_BEFORE_START_STUDENT;
-
-
-    private final GyldighetsperiodeService gyldighetsperiodeService;
     private final FintCache<String, ElevforholdResource> elevforholdResourceCache;
     private final FintCache<String, SkoleResource> skoleResourceCache;
     private final FintCache<String, OrganisasjonselementResource> organisasjonselementResourceCache;
 
     public ElevforholdService(
-            GyldighetsperiodeService gyldighetsperiodeService,
-
             FintCache<String, ElevforholdResource> elevforholdResourceCache,
             FintCache<String, SkoleResource> skoleResourceCache,
             FintCache<String, OrganisasjonselementResource> organisasjonselementResourceCache) {
-        this.gyldighetsperiodeService = gyldighetsperiodeService;
         this.elevforholdResourceCache = elevforholdResourceCache;
         this.skoleResourceCache = skoleResourceCache;
         this.organisasjonselementResourceCache = organisasjonselementResourceCache;
     }
+    public Long getNumberOFElevforholdInCache() {
+        return elevforholdResourceCache.getNumberOfDistinctValues();
+    }
 
-    public Optional<ElevforholdResource> getElevforhold(
-            Collection<Link> elevforholdLinks,
-            Date currentTime
-    ){
-        List<ElevforholdResource> elevforholdResources = elevforholdLinks
+    public List<ElevforholdResource> getAllForElev(List<Link> elevResourceForholds) {
+        return elevResourceForholds
                 .stream()
                 .map(Link::getHref)
                 .map(ResourceLinkUtil::systemIdToLowerCase)
                 .map(elevforholdResourceCache::getOptional)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
+                .flatMap(Optional::stream)
+                .filter(this::hasGyldighetsperiode)
                 .toList();
-        return getAllElevforhold(elevforholdResources, currentTime);
     }
+    public Optional<ElevforholdResource> getMainElevforhold(
+            List<ElevforholdResource> elevforholds,
+            Date currentTime
+    ) {
 
-    public Long getNumberOFElevforholdInCache(){return elevforholdResourceCache.getNumberOfDistinctValues();}
-
-
-    private Optional<ElevforholdResource> getAllElevforhold(
-            List<ElevforholdResource> elevforholdResources, Date currentTime
-    ){
-        return elevforholdResources
-                .stream()
-                .filter(elevforholdResource -> isValid(elevforholdResource,currentTime))
-                //.filter(this::isHovedSkole)
+        Optional<ElevforholdResource> activeNow = elevforholds.stream()
+                .filter(forhold -> UserUtils.isPeriodActive(forhold.getGyldighetsperiode(), currentTime))
                 .findFirst();
-    }
-
-
-    private boolean isHovedSkole(ElevforholdResource elevforhold){
-        return elevforhold.getHovedskole();
-    }
-
-    private boolean isValid(ElevforholdResource elevforholdResource, Date currentTime){
-
-        if (elevforholdResource.getGyldighetsperiode() != null) {
-            boolean isGyldighetsperiodeValid = gyldighetsperiodeService.isValid(
-                    elevforholdResource.getGyldighetsperiode(),
-                    currentTime,daysBeforeStartStudent);
-            log.info("Gydlighetsperiode for elevforhold is not null. Gyldighetsperiode is valid: {}. Days-before-start is: {}"
-                    ,isGyldighetsperiodeValid,daysBeforeStartStudent);
-            return isGyldighetsperiodeValid;
-        } else  {
-            log.info("Gyldighetsperiode for elevforhold is null");
-            return false;
+        if (activeNow.isPresent()) {
+            return activeNow;
         }
+
+        return elevforholds.stream().findFirst();
+    }
+
+    private boolean hasGyldighetsperiode(ElevforholdResource elevforholdResource) {
+        return elevforholdResource.getGyldighetsperiode() != null;
     }
 
 
-    public Optional<SkoleResource> getSkole(ElevforholdResource elevforhold, Date currentTime) {
-        String skoleHref = elevforhold.getSkole().get(0).getHref().toLowerCase();
-        Optional<SkoleResource> skoleResource = skoleResourceCache.getOptional(skoleHref);
-        if (skoleResource.isEmpty()){log.info("Fant ikke skole for " + skoleHref);}
-        return skoleResource;
+    public Optional<SkoleResource> getSkole(ElevforholdResource elevforhold) {
+        String skoleHref = elevforhold.getSkole().getFirst().getHref().toLowerCase();
+        return skoleResourceCache.getOptional(skoleHref);
 
 
     }
 
-    public Optional<OrganisasjonselementResource> getSkoleOrgUnit(SkoleResource skoleResource, Date currentTime){
+    public Optional<OrganisasjonselementResource> getSkoleOrgUnit(SkoleResource skoleResource) {
         // legg inn sjekk på null
-        String skoleOrgUnitref = skoleResource.getOrganisasjon().get(0).getHref();
+        String skoleOrgUnitref = skoleResource.getOrganisasjon().getFirst().getHref();
         //Legg på sjekk på null
         OrganisasjonselementResource organisasjonselementResource = organisasjonselementResourceCache
                 .get(ResourceLinkUtil.organisasjonsKodeToLowerCase(skoleOrgUnitref));
         return Optional.ofNullable(organisasjonselementResource);
     }
+
 }
